[package]
name = "mendeley-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
reqwest-oauth1 = "0.2.3"
url = "2.4.1"
webbrowser = "0.8.12"
